Add console versions of krita.com and kritarunner.com

BUG: 426948